# OTFFT

./: CMakeLists.txt  CMakelists.txt  LICENSE  bstcheck.cpp  dctcheck.cpp  fftbench.cpp  fftbench0.cpp  fftbench1.cpp  fftbench2.cpp  fftbench3.cpp  stopwatch.h
C99/: CMakelists.txt  HowToUse.txt  Makefile.cygwin  Makefile.linux  Makefile.macOS  bstcheck.c  dctcheck.c  fftcheck.c  fftlaptime.c  otfft  rfftcheck.c
Fortran2003/: CMakelists.txt  HowToUse.txt  Makefile.cygwin  Makefile.linux  Makefile.macOS  bstlaptime.f03  dctlaptime.f03  fftlaptime.f03  rfftlaptime.f03
otfft/: CMakeLists.txt  CMakelists.txt  Makefile.linux  fftrun.cpp  ffttune.cpp  otfft.cpp  otfft.f03  otfft.h  otfft_avxdif16.h  otfft_avxdif16exp.h  otfft_avxdif16omp.h  otfft_avxdif4.h  otfft_avxdif8exp.h  otfft_avxdif8omp.h  otfft_avxdit16.h  otfft_avxdit16exp.h  otfft_avxdit16omp.h  otfft_avxdit8.h  otfft_avxdit8exp.h  otfft_avxdit8omp.h  otfft_c.cpp  otfft_c.h  otfft_complex.h  otfft_eightstep.h  otfft_gen_delete.h  otfft_gen_fwd.h  otfft_gen_fwd0.h  otfft_gen_fwdu.h  otfft_gen_inv.h  otfft_gen_invn.h  otfft_gen_invu.h  otfft_gen_new.h  otfft_gen_setup.h  otfft_misc.h  otfft_sixstepsq.h
